--- a/starter/ContosoDentistryChatBot/package.json
+++ b/starter/ContosoDentistryChatBot/package.json
@@ -19,7 +19,7 @@
         "botbuilder": "~4.11.0",
         "botbuilder-ai": "^4.12.0",
         "dotenv": "^8.2.0",
-        "restify": "~8.5.1"
+        "restify": "10.0.0"
     },
     "devDependencies": {
         "eslint": "^7.0.0",
