--- a/starter/ContosoDentistryChatBot/package.json
+++ b/starter/ContosoDentistryChatBot/package.json
@@ -16,10 +16,10 @@
         "url": "https://github.com"
     },
     "dependencies": {
-        "botbuilder": "~4.11.0",
-        "botbuilder-ai": "^4.12.0",
+        "botbuilder": "~4.17.0",
+        "botbuilder-ai": "^4.17.0",
         "dotenv": "^8.2.0",
-        "restify": "10.0.0"
+        "restify": "~8.6.0"
     },
     "devDependencies": {
         "eslint": "^7.0.0",
